Adding Piranha deps

--- a/AwsDotnetCsharp.csproj
+++ b/AwsDotnetCsharp.csproj
@@ -9,5 +9,13 @@
     <PackageReference Include="Amazon.Lambda.Serialization.Json" Version="1.8.0" />
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="5.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Piranha" Version="8.4.2" />
+    <PackageReference Include="Piranha.AttributeBuilder" Version="8.4.0" />
+    <PackageReference Include="Piranha.Data.EF.SQLite" Version="8.4.0" />
+    <PackageReference Include="Piranha.ImageSharp" Version="8.4.0" />
+    <PackageReference Include="Piranha.Local.FileStorage" Version="8.4.0" />
+    <PackageReference Include="Piranha.AspNetCore.Identity.SQLite" Version="8.4.0" />
+    <PackageReference Include="Piranha.Manager" Version="8.4.1" />
+    <PackageReference Include="Piranha.Manager.TinyMCE" Version="8.4.0" />
   </ItemGroup>
 </Project>
